fix code for overlapping sidebar on context/ remodel my-groups.html

--- a/src/app/components/dashboard/dashboard.css
+++ b/src/app/components/dashboard/dashboard.css
@@ -1,21 +1,13 @@
-/*
-@media (min-width: 830px) and (max-width: 860px){
-  .container {
-    max-width: 700px ;
-  }
-}
-@media (min-width: 805px) and (max-width: 830px){
+/*@media (min-width: 805px) and (max-width: 830px){
   .container {
     margin-right: 0;
     padding-right: 0;
-    max-width: 700px ;
   }
 }
 @media (min-width: 768px) and (max-width: 805px){
   .container {
     margin-right: 0;
     padding-right: 0;
-    max-width: 700px ;
   }
   .content{
     padding-right: 1px;
